--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "summernote-ext-print",
   "authors": [
-    "Park Hyunwoo <ez@smartstudy.co.kr>"
+    "Park Hyunwoo <ez.amiryo@gmail.com>"
   ],
   "description": "Print plugin for Summernote",
   "main": "summernote-ext-print.js",
